# scraper-service-rust

./: .gitattributes  Cargo.toml  Dockerfile  README.md  debug_response.html
src/: main.rs
