[package]
name = "scraper-service-rust"
version = "0.1.0"
edition = "2021" # Usando uma edição mais recente e estável

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
lazy_static = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }